# buf_example

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PRD.md  buf.gen.cpp.yaml  buf.gen.csharp.yaml  buf.gen.go.yaml  buf.gen.rust.yaml  buf.gen.yaml  pyrightconfig.json  ruff.toml
cpp_package/: CMakeLists.txt
csharp_package/: Demo.Proto.Bindings.csproj
echo_client/: client.py  pyproject.toml
echo_client_cpp/: CMakeLists.txt  main.cpp
echo_client_go/: go.mod  main.go
echo_client_rust/: Cargo.toml
echo_client_rust/src/: main.rs
echo_server/: pyproject.toml  server.py
echo_server_cpp/: CMakeLists.txt  main.cpp
echo_server_go/: go.mod  main.go
echo_server_rust/: Cargo.toml
echo_server_rust/src/: main.rs
go_package/: go.mod
proto/demo/echo/v1/: echo.proto
proto/demo/notification/v1/: notification.proto
proto/demo/user/v1/: user.proto
proto_package/: pyproject.toml
rust_package/: Cargo.toml
rust_package/src/: lib.rs
