[package]
name = "echo-client-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo-client-rust"
path = "src/main.rs"

[dependencies]
demo-proto-bindings = { path = "../rust_package" }
tonic = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
