[package]
name = "echo-server-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo-server-rust"
path = "src/main.rs"

[dependencies]
demo-proto-bindings = { path = "../rust_package" }
tonic = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
async-stream = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
