[project]
name = "demo-proto-bindings"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=4.25.0",
    "grpcio>=1.60.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["demo*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
